--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -1,16 +1,49 @@
 
-@techreport{RIPngStd,
+@techreport{RFC1058,
+  type = {Standard},
+  key = {RFC1058},
+  month = Jun,
+  year = {1988},
+  title = {{Routing Information Protocol}},
+  authors = {C. Henrik},
+  institution = {Rutgers University},
+  url = {https://tools.ietf.org/html/rfc1058}
+}
+
+@techreport{RFC2080,
   type = {Standard},
   key = {RFC2080},
   month = Jan,
   year = {1997},
   title = {{RIPng for IPv6}},
   authors = {Malkin & Minnear},
-  institution = {Internet Engineering Task Force},
+  institution = {Ipsilon Networks},
   url = {https://tools.ietf.org/html/rfc2080}
 }
 
-@misc{RIPguide,
+@techreport{RFC2453,
+  type = {Standard},
+  key = {RFC2453},
+  month = Nov,
+  year = {1998},
+  title = {{RIP Version 2}},
+  authors = {G. Malkin},
+  institution = {Bay Networks},
+  url = {https://tools.ietf.org/html/rfc2453}
+}
+
+@techreport{RFC2081,
+  type = {Standard},
+  key = {RFC2081},
+  month = Jan,
+  year = {1997},
+  title = {{RIPng Protocol Applicability Statement}},
+  authors = {G. Malkin},
+  institution = {Xylogics},
+  url = {https://tools.ietf.org/html/rfc2081}
+}
+
+@misc{RIPGuide,
   author  = "Charles M. Kozierok",
   title   = "TCP/IP Routing Information Protocol (RIP, RIP-2 and RIPng)",
   year    = "2005",
@@ -18,41 +51,18 @@
   url     = "http://www.tcpipguide.com/"
 }
 
-
-
-
-
-@misc{DHCPwikipedia,
-  title = {Dynamic Host Configuration Protocol - Wikipedia},
-  howpublished = {\url{https://en.wikipedia.org/wiki/Dynamic_Host_Configuration_Protocol}},
-  note = {Accessed: 2018-03-20}
+@misc{RIPJuniper,
+  author  = "Juniper Networks",
+  month = Aug,
+  year = 2017,
+  title = {{RIP Overview}},
+  url = {https://www.juniper.net/documentation/en_US/junos/topics/concept/routing-protocol-rip-security-overview.html}
 }
 
-@misc{DHCPcomm,
-  author  = "Wikimedia Commons",
-  title   = "An illustration of a typical non-renewing DHCP session",
-  year    = "2015",
-  urlseen = "20-03-18",
-  url     = "https://en.wikipedia.org/wiki/Dynamic_Host_Configuration_Protocol#/media/File:DHCP_session.svg",
-  note    = "File: \ttfamily{DHCP\_session.jpg}",
-}
-
-@misc{computer,
-  author  = "Wikipedia Commons",
-  title   = "A drawing of a usual modern desktop computer",
-  year    = "2016",
-  urlseen = "08-03-18",
-  url     = "https://simple.wikipedia.org/wiki/Computer#/media/File:Desktop_computer_clipart_-_Yellow_theme.svg",
-  note    = "File: \ttfamily{Desktop\_computer\_clipart\_-\_Yellow\_theme.svg}",
-}
-
-@misc{laptop,
-  author  = "Wikipedia Commons",
-  title   = "A Lenovo laptop",
-  year    = "2015",
-  urlseen = "08-03-18",
-  url     = "https://en.wikipedia.org/wiki/Laptop#/media/File:Lenovo\_G500s\_laptop-2905.jpg",
-  note    = "File: \ttfamily{Lenovo\_G500s\_laptop-2905.jpg}",
+@misc{RIPWikipedia,
+  title = {Routing Information Protocol - Wikipedia},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Routing_Information_Protocol}},
+  note = {Accessed: 2018-09-30}
 }
 
 @book{computernetworking,
@@ -63,14 +73,6 @@
     publisher = {Addison Wesley}
 }
 
-@book{pocitacovesite,
-    title = {Počítačové sítě},
-    author = {James F. Kurose a Keith W. Ross},
-    isbn = {978-80-251-3825-0},
-    year = {2014},
-    publisher = {Albatros Media}
-}
-
 @book{mistrovstvivsitich,
     title = {Mistrovství v počítačových sítích},
     author = {Stephen J. Bigelow},
@@ -79,20 +81,22 @@
     publisher = {Computer Press}
 }
 
-@misc{DHCPstarvation,
-  title = {A Closer Look into DHCP Starvation Attack in Wireless Networks},
-  author = {Neminath Hubballi and Nikhil Tripathi},
-  address = {Discipline of Computer Science and Engineering, School of Engineering, Indian Institute of Technology Indore},
-  doi = {10.1016/j.cose.2016.10.002},
-  month = {october},
-  year = {2016}
+@misc{PCimage,
+  author  = "Wikimedia Commons",
+  title   = "IBM PC 5150",
+  year    = "2004",
+  urlseen = "20-09-30",
+  url     = "https://en.wikipedia.org/wiki/Personal_computer",
+  note    = "File: \ttfamily{IBM\_PC\_5150.jpg}"
 }
 
-@misc{IBSattack,
-  title = {Lecture Network attacks, course Security and Computer Networks},
-  author = {Mgr. Ing. Očenášek Pavel Ph.D.},
-  year = {2018},
-  address = {Faculty of information technologies, Brno University of Technology}
+@misc{Cloudimage,
+  author  = "Wikimedia Commons",
+  title   = "Cartoon cloud",
+  year    = "2009",
+  urlseen = "20-09-30",
+  url     = "https://en.m.wikipedia.org/wiki/File:Cartoon_cloud.svg",
+  note    = "File: \ttfamily{Cartoon\_cloud.svg}"
 }
 
 @misc{IPKDHCP,
