docs and program

--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -85,18 +85,56 @@
   author  = "Wikimedia Commons",
   title   = "IBM PC 5150",
   year    = "2004",
-  urlseen = "20-09-30",
+  note = {Visited on 2018-10-17},
   url     = "https://en.wikipedia.org/wiki/Personal_computer",
-  note    = "File: \ttfamily{IBM\_PC\_5150.jpg}"
 }
 
 @misc{Cloudimage,
   author  = "Wikimedia Commons",
   title   = "Cartoon cloud",
   year    = "2009",
-  urlseen = "20-09-30",
+  note = {Visited on 2018-10-17},
   url     = "https://en.m.wikipedia.org/wiki/File:Cartoon_cloud.svg",
-  note    = "File: \ttfamily{Cartoon\_cloud.svg}"
+}
+
+@misc{WindowsLogo,
+  author  = "Wikimedia Commons",
+  title   = "Windows Logo 2012",
+  year    = "2016",
+  note = {Visited on 2018-10-17},
+  url     = "https://commons.wikimedia.org/wiki/File:Windows_logo_%E2%80%93_2012_(blue-purple).svg",
+}
+
+@misc{UbuntuLogo,
+  author  = "Wikimedia Commons",
+  title   = "Logo Ubuntu",
+  year    = "2012",
+  note = {Visited on 2018-10-17},
+  url     = "https://commons.wikimedia.org/wiki/File:Logo-ubuntu_cof-orange-hex.svg",
+}
+
+@misc{MintLogo,
+  author  = "Wikimedia Commons",
+  title   = "Linux Mint logo",
+  year    = "2014",
+  note = {Visited on 2018-10-17},
+  url     = "https://commons.wikimedia.org/wiki/File:Linux_Mint_logo_without_wordmark.svg",
+}
+
+@misc{FreeBSDLogo,
+  author  = "Wikimedia Commons",
+  title   = "FreeBSD Logo",
+  year    = "2016",
+  note = {Visited on 2018-10-17},
+  url     = "https://commons.wikimedia.org/wiki/File:Antu_distributor-logo-freebsd.svg",
+}
+
+@misc{VirtualBoxLogo,
+  author  = "Wikimedia Commons",
+  title   = "VirtualBox Logo",
+  year    = "2010",
+  note = {Visited on 2018-10-17},
+  url     = "https://commons.wikimedia.org/wiki/File:Virtualbox_logo.png",
 }
 
 @misc{IPKDHCP,
